--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
               Projet individuel S.1
             </div>
             <div class="card-body">
-              <h3>Titre du projet</h3>
-              <p>Court descriptif (3-4 lignes max)</p>
+              <h3>projet de real codeur</h3>
+              <p>wow ce mec taff chez google ?!</p>
               <div class="row">
                 <div class="col-md-6">
                   <h5>Maquettage</h5>
                   <p class="btn-group">
-                    <a href="#" class="btn btn-sm btn-outline-secondary">Maquette graphique</a>
+                    <a href="ceci est un url" class="btn btn-sm btn-outline-secondary">Maquette graphique</a>
                     <a href="#" class="btn btn-sm btn-outline-secondary">Slides de présentation</a>
                   </p>
                 </div>
