--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Projets MMI — prénom NOM</title>
+    <title>Projets MMI — Félix Allaire</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
@@ -50,9 +50,9 @@
                 <div class="col-md-6">
                   <h5>Projet final</h5>
                   <p class="btn-group">
-                    <a href="#" class="btn btn-sm btn-outline-secondary">Repository Github</a>
-                    <a href="#" class="btn btn-sm btn-outline-secondary">Slides de présentation</a>
-                    <a href="#" class="btn btn-sm btn-primary">Projet final</a>
+                    <a href="https://github.com/SYBzone/projetS1.git" class="btn btn-sm btn-outline-secondary">Repository Github</a>
+                    <a href="https://docs.google.com/presentation/d/1FaKCFwGVhSOhU7wl60i80GUDKDZdn8wko1ImKd_0fs4/edit#slide=id.gb184408f60_0_8" class="btn btn-sm btn-outline-secondary">Slides de présentation</a>
+                    <a href="http://projets1.sitecali.fr/index.html" class="btn btn-sm btn-primary">Projet final</a>
                   </p>
                 </div>
               </div>
